[gd_scene load_steps=25 format=2]

[ext_resource path="res://scenes/raqscene/mdl_raqscene_badminton_stage_area0.glb" type="PackedScene" id=1]
[ext_resource path="res://scenes/raqscene/mdl_raqscene_badminton_racquet.glb" type="PackedScene" id=2]
[ext_resource path="res://scenes/raqscene/scripts/control_badminton.gd" type="Script" id=3]
[ext_resource path="res://scenes/common/tex_color_black.png" type="Texture" id=4]
[ext_resource path="res://scenes/common/tex_color_white.png" type="Texture" id=5]
[ext_resource path="res://scenes/raqscene/mdl_raqscene_badminton_shuttlecock.glb" type="PackedScene" id=6]
[ext_resource path="res://scenes/raqscene/scripts/bad_shuttlecock.gd" type="Script" id=7]
[ext_resource path="res://scenes/raqscene/scripts/game_raq_bad.gd" type="Script" id=8]
[ext_resource path="res://scenes/raqscene/mdl_raqscene_badminton_stage0.glb" type="PackedScene" id=9]
[ext_resource path="res://scenes/common/debug_motionaxis.gd" type="Script" id=10]
[ext_resource path="res://scenes/common/tex_color_red.png" type="Texture" id=11]
[ext_resource path="res://scenes/common/tex_color_blue.png" type="Texture" id=12]
[ext_resource path="res://scenes/common/tex_color_green.png" type="Texture" id=13]
[ext_resource path="res://scenes/raqscene/scripts/ai_badminton.gd" type="Script" id=14]
[ext_resource path="res://scenes/common/mat_color_green.tres" type="Material" id=15]
[ext_resource path="res://scenes/common/mat_color_red.tres" type="Material" id=16]
[ext_resource path="res://scenes/common/mdl_miis_tempmii2.glb" type="PackedScene" id=17]
[ext_resource path="res://scenes/common/mdl_miis_tempmii1.glb" type="PackedScene" id=18]

[sub_resource type="BoxShape" id=6]
extents = Vector3( 2.617, 0.1, 5.981 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 16, 0.1, 16 )

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.392157 )

[sub_resource type="SphereShape" id=5]
radius = 0.02

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 1, 0.00784314, 0.00784314, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )
width = 1

[node name="main" type="Spatial"]

[node name="env" type="Spatial" parent="."]

[node name="DirectionalLight" type="DirectionalLight" parent="env"]
transform = Transform( 1, 0, 0, 0, 0.453337, 0.891339, 0, -0.891339, 0.453337, -10.461, 0, 2.40188 )

[node name="stage" type="Spatial" parent="."]

[node name="mdl_raqscene_badminton_stage0" parent="stage" instance=ExtResource( 9 )]

[node name="mdl_raqscene_badminton_stage_area0" parent="stage" instance=ExtResource( 1 )]

[node name="game" type="Spatial" parent="."]
script = ExtResource( 8 )

[node name="triggers" type="Spatial" parent="game"]

[node name="floor" type="StaticBody" parent="game/triggers"]

[node name="CollisionShape" type="CollisionShape" parent="game/triggers/floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0 )
shape = SubResource( 6 )

[node name="out" type="StaticBody" parent="game/triggers"]

[node name="CollisionShape" type="CollisionShape" parent="game/triggers/out"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.15, 0 )
shape = SubResource( 4 )

[node name="p1" type="Spatial" parent="game"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.29168, 0, 3.75642 )
script = ExtResource( 3 )

[node name="racquet" type="Spatial" parent="game/p1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1.2, 0 )

[node name="mdl_raqscene_badminton_racquet" parent="game/p1/racquet" instance=ExtResource( 2 )]
transform = Transform( 1.5, 0, 0, 0, -6.55671e-08, 1.5, 0, -1.5, -6.55671e-08, 0, -0.720068, 0 )

[node name="CSGCylinder" type="CSGCylinder" parent="game/p1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0 )
visible = false
radius = 0.3
height = 1.6
material = SubResource( 1 )

[node name="Camera" type="Camera" parent="game/p1"]
transform = Transform( 1, 0, 0, 0, 0.969965, 0.243243, 0, -0.243243, 0.969965, -0.01407, 3.50685, 3.78058 )

[node name="mdl_miis_tempmii2" parent="game/p1" instance=ExtResource( 17 )]

[node name="p2_ai" type="Spatial" parent="game"]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, -1.69724, 0, -4.84707 )
script = ExtResource( 14 )

[node name="racquet" type="Spatial" parent="game/p2_ai"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1.2, 0 )

[node name="CSGCylinder" type="CSGCylinder" parent="game/p2_ai"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0 )
visible = false
radius = 0.3
height = 1.6
material = SubResource( 1 )

[node name="mdl_miis_tempmii1" parent="game/p2_ai" instance=ExtResource( 18 )]

[node name="mdl_raqscene_badminton_racquet" parent="game/p2_ai" instance=ExtResource( 2 )]
transform = Transform( 1.5, 0, 0, 0, -6.55671e-08, 1.5, 0, -1.5, -6.55671e-08, 0.5, 0.479932, 0 )

[node name="Camera2" type="Camera" parent="game"]
transform = Transform( 7.54979e-08, 0.488195, -0.872735, 0, 0.872735, 0.488195, 1, -3.68577e-08, 6.58896e-08, -8.22152, 6.34465, 3.78052e-07 )

[node name="shuttlecock" type="KinematicBody" parent="game"]
script = ExtResource( 7 )

[node name="model" type="Spatial" parent="game/shuttlecock"]

[node name="mdl_raqscene_badminton_shuttlecock" parent="game/shuttlecock/model" instance=ExtResource( 6 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="game/shuttlecock"]
shape = SubResource( 5 )

[node name="hud" type="Control" parent="game"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scorebg" type="TextureRect" parent="game/hud"]
self_modulate = Color( 1, 1, 1, 0.25098 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0
margin_right = 64.0
margin_bottom = 16.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="RichTextLabel" parent="game/hud"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -480.0
margin_right = 480.0
margin_bottom = 30.0
bbcode_enabled = true
bbcode_text = "[center]status"
text = "status"

[node name="debug" type="Spatial" parent="game"]

[node name="trajectory" type="ImmediateGeometry" parent="game/debug"]
material_override = ExtResource( 15 )
extra_cull_margin = 3458.17

[node name="trajectory2" type="ImmediateGeometry" parent="game/debug"]
material_override = ExtResource( 16 )
extra_cull_margin = 3458.17

[node name="debughud" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="badm" type="Control" parent="debughud"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dir" type="Panel" parent="debughud/badm"]
self_modulate = Color( 1, 1, 1, 0.25098 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -136.0
margin_right = 136.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dot" type="TextureRect" parent="debughud/badm/dir"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 62.0
margin_top = 62.0
margin_right = -61.9999
margin_bottom = -62.0
rect_min_size = Vector2( 4, 4 )
texture = SubResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="debughud/badm/dir"]
anchor_right = 1.0
margin_left = 1.0
margin_top = -7.0
margin_right = -1.0
margin_bottom = 7.0
text = "Hit Direction"

[node name="pow" type="TextureProgress" parent="debughud/badm"]
self_modulate = Color( 1, 1, 1, 0.25098 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 140.0
margin_top = -8.0
margin_right = 268.0
margin_bottom = 6.0
rect_min_size = Vector2( 128, 8 )
rect_rotation = -90.0
max_value = 1.0
step = 0.01
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="debughud/badm/pow"]
margin_left = -1.0
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "Power"

[node name="Panel" type="Panel" parent="debughud/badm"]
self_modulate = Color( 1, 1, 1, 0.25098 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -192.0
margin_top = -86.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="debughud/badm/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Racquet Sports: Badminton
L Stick: adjust direction
R Trigger: Power
Square btn: Hit
HOME / PS / Guide btn: exit"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controller_all" type="Control" parent="debughud"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="axisraw" type="Panel" parent="debughud/controller_all"]
self_modulate = Color( 1, 1, 1, 0.25098 )
margin_left = 8.0
margin_top = 8.0
margin_right = 136.0
margin_bottom = 240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="debughud/controller_all/axisraw"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="debughud/controller_all/axisraw/VBoxContainer"]
margin_right = 120.0
margin_bottom = 14.0
text = "Controller Debug"

[node name="refreshbut" type="Button" parent="debughud/controller_all/axisraw/VBoxContainer"]
margin_top = 18.0
margin_right = 120.0
margin_bottom = 38.0
text = "refresh list"
flat = true

[node name="controllerselect" type="OptionButton" parent="debughud/controller_all/axisraw/VBoxContainer"]
margin_top = 42.0
margin_right = 120.0
margin_bottom = 62.0
flat = true
clip_text = true

[node name="axis0" type="TextureProgress" parent="debughud/controller_all/axisraw/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.25098 )
margin_top = 66.0
margin_right = 120.0
margin_bottom = 82.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.01
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="debughud/controller_all/axisraw/VBoxContainer/axis0"]
margin_left = -1.0
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "axis0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="axis1" type="TextureProgress" parent="debughud/controller_all/axisraw/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.25098 )
margin_top = 86.0
margin_right = 120.0
margin_bottom = 102.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.01
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="debughud/controller_all/axisraw/VBoxContainer/axis1"]
margin_left = -1.0
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "axis1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="axis2" type="TextureProgress" parent="debughud/controller_all/axisraw/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.25098 )
margin_top = 106.0
margin_right = 120.0
margin_bottom = 122.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.01
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="debughud/controller_all/axisraw/VBoxContainer/axis2"]
margin_left = -1.0
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "axis2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="axis3" type="TextureProgress" parent="debughud/controller_all/axisraw/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.25098 )
margin_top = 126.0
margin_right = 120.0
margin_bottom = 142.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.01
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="debughud/controller_all/axisraw/VBoxContainer/axis3"]
margin_left = -1.0
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "axis3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="axis4" type="TextureProgress" parent="debughud/controller_all/axisraw/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.25098 )
margin_top = 146.0
margin_right = 120.0
margin_bottom = 162.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.01
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="debughud/controller_all/axisraw/VBoxContainer/axis4"]
margin_left = -1.0
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "axis4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="axis5" type="TextureProgress" parent="debughud/controller_all/axisraw/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.25098 )
margin_top = 166.0
margin_right = 120.0
margin_bottom = 182.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.01
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="debughud/controller_all/axisraw/VBoxContainer/axis5"]
margin_left = -1.0
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "axis5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="axis6" type="TextureProgress" parent="debughud/controller_all/axisraw/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.25098 )
margin_top = 186.0
margin_right = 120.0
margin_bottom = 202.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.01
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="debughud/controller_all/axisraw/VBoxContainer/axis6"]
margin_left = -1.0
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "axis6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="axis7" type="TextureProgress" parent="debughud/controller_all/axisraw/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.25098 )
margin_top = 206.0
margin_right = 120.0
margin_bottom = 222.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.01
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="debughud/controller_all/axisraw/VBoxContainer/axis7"]
margin_left = -1.0
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "axis7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="axis8" type="TextureProgress" parent="debughud/controller_all/axisraw/VBoxContainer"]
visible = false
self_modulate = Color( 1, 1, 1, 0.25098 )
margin_top = 226.0
margin_right = 120.0
margin_bottom = 242.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.01
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="debughud/controller_all/axisraw/VBoxContainer/axis8"]
margin_left = -1.0
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "axis8"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="axis9" type="TextureProgress" parent="debughud/controller_all/axisraw/VBoxContainer"]
visible = false
self_modulate = Color( 1, 1, 1, 0.25098 )
margin_top = 246.0
margin_right = 120.0
margin_bottom = 262.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.01
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="debughud/controller_all/axisraw/VBoxContainer/axis9"]
margin_left = -1.0
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "axis9"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="axis10" type="TextureProgress" parent="debughud/controller_all/axisraw/VBoxContainer"]
visible = false
self_modulate = Color( 1, 1, 1, 0.25098 )
margin_top = 266.0
margin_right = 120.0
margin_bottom = 282.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.01
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="debughud/controller_all/axisraw/VBoxContainer/axis10"]
margin_left = -1.0
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "axis10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="axis11" type="TextureProgress" parent="debughud/controller_all/axisraw/VBoxContainer"]
visible = false
self_modulate = Color( 1, 1, 1, 0.25098 )
margin_top = 286.0
margin_right = 120.0
margin_bottom = 302.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.01
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="debughud/controller_all/axisraw/VBoxContainer/axis11"]
margin_left = -1.0
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "axis11"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="axis12" type="TextureProgress" parent="debughud/controller_all/axisraw/VBoxContainer"]
visible = false
self_modulate = Color( 1, 1, 1, 0.25098 )
margin_top = 306.0
margin_right = 120.0
margin_bottom = 322.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.01
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="debughud/controller_all/axisraw/VBoxContainer/axis12"]
margin_left = -1.0
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "axis12"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="axis13" type="TextureProgress" parent="debughud/controller_all/axisraw/VBoxContainer"]
visible = false
self_modulate = Color( 1, 1, 1, 0.25098 )
margin_top = 326.0
margin_right = 120.0
margin_bottom = 342.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.01
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="debughud/controller_all/axisraw/VBoxContainer/axis13"]
margin_left = -1.0
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "axis13"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="axis14" type="TextureProgress" parent="debughud/controller_all/axisraw/VBoxContainer"]
visible = false
self_modulate = Color( 1, 1, 1, 0.25098 )
margin_top = 346.0
margin_right = 120.0
margin_bottom = 362.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.01
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="debughud/controller_all/axisraw/VBoxContainer/axis14"]
margin_left = -1.0
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "axis14"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="axis15" type="TextureProgress" parent="debughud/controller_all/axisraw/VBoxContainer"]
visible = false
self_modulate = Color( 1, 1, 1, 0.25098 )
margin_top = 366.0
margin_right = 120.0
margin_bottom = 382.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.01
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="debughud/controller_all/axisraw/VBoxContainer/axis15"]
margin_left = -1.0
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "axis15"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="motion" type="Panel" parent="debughud/controller_all"]
self_modulate = Color( 1, 1, 1, 0.25098 )
margin_left = 140.0
margin_top = 8.0
margin_right = 268.0
margin_bottom = 136.0
rect_min_size = Vector2( 128, 128 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="xpos" type="TextureProgress" parent="debughud/controller_all/motion"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.0
margin_top = -2.0
margin_right = 30.0
rect_min_size = Vector2( 64, 2 )
rect_rotation = 19.5
max_value = 1.0
step = 0.01
value = 1.0
texture_progress = ExtResource( 11 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="xneg" type="TextureProgress" parent="debughud/controller_all/motion"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -3.0
margin_right = 29.0
margin_bottom = 2.0
rect_min_size = Vector2( 64, 2 )
rect_rotation = -160.5
max_value = 1.0
step = 0.01
value = 1.0
texture_progress = ExtResource( 11 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ypos" type="TextureProgress" parent="debughud/controller_all/motion"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 36.0
margin_top = 16.0
margin_right = 68.0
margin_bottom = 18.0
rect_min_size = Vector2( 64, 2 )
rect_rotation = -90.0
rect_pivot_offset = Vector2( -28, 12 )
max_value = 1.0
step = 0.01
value = 1.0
texture_progress = ExtResource( 13 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yneg" type="TextureProgress" parent="debughud/controller_all/motion"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = 38.0
margin_right = 14.0
margin_bottom = 40.0
rect_min_size = Vector2( 64, 2 )
rect_rotation = 90.0
rect_pivot_offset = Vector2( 28, -12 )
max_value = 1.0
step = 0.01
value = 1.0
texture_progress = ExtResource( 13 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="zpos" type="TextureProgress" parent="debughud/controller_all/motion"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 15.0
margin_top = 15.0
margin_right = 47.0
margin_bottom = 17.0
rect_min_size = Vector2( 64, 2 )
rect_rotation = -48.4134
rect_pivot_offset = Vector2( -28, 12 )
max_value = 1.0
step = 0.01
value = 1.0
texture_progress = ExtResource( 12 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="zneg" type="TextureProgress" parent="debughud/controller_all/motion"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.0
margin_top = 41.0
margin_right = 23.0
margin_bottom = 43.0
rect_min_size = Vector2( 64, 2 )
rect_rotation = -226.7
rect_pivot_offset = Vector2( 28, -12 )
max_value = 1.0
step = 0.01
value = 1.0
texture_progress = ExtResource( 12 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="debughud/controller_all/axisraw/VBoxContainer/refreshbut" to="debughud/controller_all" method="_on_refreshbut_button_down"]
